site/_build/html/reports/dsc20.err.log
Traceback (most recent call last):
  File "/Users/qad/anaconda3/envs/dsc/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 64, in single_nb_execution
    **kwargs,
  File "/Users/qad/anaconda3/envs/dsc/lib/python3.7/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/qad/anaconda3/envs/dsc/lib/python3.7/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/qad/anaconda3/envs/dsc/lib/python3.7/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/qad/anaconda3/envs/dsc/lib/python3.7/asyncio/base_events.py", line 587, in run_until_complete
    return future.result()
  File "/Users/qad/anaconda3/envs/dsc/lib/python3.7/site-packages/nbclient/client.py", line 664, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/Users/qad/anaconda3/envs/dsc/lib/python3.7/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/qad/anaconda3/envs/dsc/lib/python3.7/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# DSC \#20: Xanda Rescues the Topic Model Disaster

<div style='float: right; width: 200px;margin-left: 7px;margin-top: 0px;'>
<img src='_static/images/bookcovers/dsc20_cover.jpg' alt='DSC 19 book cover' />
</div>
------------------

[0;36m  File [0;32m"/var/folders/3r/55b5kjpd4s14_tg80r24vs7r0000gq/T/ipykernel_20772/272181639.py"[0;36m, line [0;32m3[0m
[0;31m    <div style='float: right; width: 200px;margin-left: 7px;margin-top: 0px;'>[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (272181639.py, line 3)

